# WusicPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.h  PlaylistManager.cpp.bak  PlaylistManager.h.bak  README.md  WPlayListWidgetItem.h  main.cpp  mainwindow.cpp  mainwindow.h  player.h  wtimeprogress.cpp  wtimeprogress.h
include/: audio.h  header.h
src/: CMakeLists.txt  app_controller.cpp  app_controller.h  main.cpp
src/ConfigManager/: ConfigManager.cpp  ConfigManager.h
src/LibraryWidget/: LibraryWidget.cpp  LibraryWidget.h
src/SidePanel/: ElidedLabel.h  SidePanel.cpp  SidePanel.h  WLyricsModel.cpp  WLyricsModel.h  WLyricsPanel.cpp  WLyricsPanel.h
src/WControlBar/: WControlBar.cpp  WControlBar.h  wtimeprogress.h
src/WLyricsPanel/: WLyricsModel.cpp  WLyricsModel.h  WLyricsPanel.cpp  WLyricsPanel.h
src/controller/: CMakeLists.txt  PlaybackController.cpp  PlaybackController.h  PlaylistController.cpp  PlaylistController.h  shortcuts_controller.cpp  shortcuts_controller.h  shortcuts_controller.hpp
src/controller/search_backend/: i_search_backend.h  in_memory_search_backend.cpp  in_memory_search_backend.h
src/core/: CMakeLists.txt  hsv_types.h  search_types.h  types.h
src/core/ConfigManager/: ConfigManager.cpp  ConfigManager.h  IConfigSection.hpp  LibraryViewSection.hpp  PlaybackConfigSection.hpp
src/core/utils/: AudioUtils.h
src/model/: CMakeLists.txt
src/model/ShortcutsViewModel/: shortcuts_types.hpp  shortcuts_view_model.cpp  shortcuts_view_model.hpp
src/model/player/: player.cpp  player.h
src/model/playlist/: playlist.cpp  playlist.h  playlist_context.cpp  playlist_context.h  playlist_layout.cpp  playlist_layout.h  playlist_manager.cpp  playlist_manager.h  playlist_repo.cpp  playlist_repo.h  playlist_search_proxy_model.cpp  playlist_search_proxy_model.h  playlist_view_model.cpp  playlist_view_model.h
src/model/search_model/: search_model.cpp  search_model.h
src/player/: player.cpp  player.h
src/playlist/: playlist.cpp  playlist.h  playlist_context.cpp  playlist_context.h  playlist_definitions.h  playlist_layout.cpp  playlist_layout.h  playlist_manager.cpp  playlist_manager.h  playlist_repo.cpp  playlist_repo.h  playlist_search_panel.cpp  playlist_search_panel.h  playlist_search_proxy_model.h  playlist_view_model.cpp  playlist_view_model.h  playlist_widgets.cpp  playlist_widgets.h
src/playlist/sort_model/: sort_schema.cpp  sort_schema.h
src/static/: CMakeLists.txt
src/view/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlaybackRestoreCoordinator.hpp
src/view/ConfigBinder/: DesktopLyricsBinder.cpp  DesktopLyricsBinder.hpp  DesktopLyricsSection.hpp  IConfigBinder.hpp  IConfigSection.hpp  LibraryViewBinder.cpp  LibraryViewBinder.hpp  LibraryViewSection.hpp  MainWindowConfigContext.hpp  PlaybackConfigBinder.cpp  PlaybackConfigBinder.hpp  PlaybackConfigSection.hpp  SearchPanelBinder.cpp  SearchPanelBinder.hpp  SearchPanelSection.hpp  SettingsPanelBinder.cpp  SettingsPanelBinder.hpp  SettingsPanelSection.hpp  ShortcutsBinder.cpp  ShortcutsBinder.hpp  ShortcutsSection.hpp  WindowConfigBinder.cpp  WindowConfigBinder.hpp  WindowConfigSection.hpp
src/view/DesktopLyricsWidget/: DesktopLyricsWidget.cpp  DesktopLyricsWidget.h
src/view/LibraryWidget/: LibraryWidget.cpp  LibraryWidget.h
src/view/SettingsPanel/: SettingsPanel.cpp  SettingsPanel.hpp
src/view/SettingsPanel/ShortcutsPanel/: ShortcutsPanel.cpp  ShortcutsPanel.hpp
src/view/SettingsPanel/lyrics_setting_panel/: lyrics_setting_panel.cpp  lyrics_setting_panel.h
src/view/SidePanel/: ElidedLabel.h  SidePanel.cpp  SidePanel.h  WLyricsModel.cpp  WLyricsModel.h  WLyricsPanel.cpp  WLyricsPanel.h
src/view/WControlBar/: WControlBar.cpp  WControlBar.h  wtimeprogress.cpp  wtimeprogress.h
src/view/dialogs/: font_select_dialog.cpp  font_select_dialog.h
src/view/dialogs/hsv_dialog/: basic_colors_item.h  color_preview_item.cpp  color_preview_item.h  hsv_dialog.cpp  hsv_dialog.h  hsv_palette.h  hsv_to_rgb.h  label_matrix.h
src/view/hsv_dialog/: hsv_dialog.cpp  hsv_dialog.h  hsv_palette.cpp  hsv_to_rgb.c  label_matrix.cpp
src/view/playlist/: playlist_widgets.cpp  playlist_widgets.h
src/view/search_panel/: playlist_search_panel.cpp  playlist_search_panel.h
test/: CMakeLists.txt
test/AudioScanner/: AudioScanner.cpp  a.out
test/playlist/: tb_playlist.cpp
